* Sybil Attack * Bitcoin

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -80,6 +80,24 @@
 	year={2010}
 }
 
+@inproceedings{newsome-sybil,
+  title={The sybil attack in sensor networks: analysis \& defenses},
+  author={Newsome, James and Shi, Elaine and Song, Dawn and Perrig, Adrian},
+  booktitle={Proceedings of the 3rd international symposium on Information processing in sensor networks},
+  pages={259--268},
+  year={2004},
+  organization={ACM}
+}
+
+@inproceedings{dinger-sybil,
+  title={Defending the sybil attack in p2p networks: Taxonomy, challenges, and a proposal for self-registration},
+  author={Dinger, Jochen and Hartenstein, Hannes},
+  booktitle={Availability, Reliability and Security, 2006. ARES 2006. The First International Conference on},
+  pages={8--pp},
+  year={2006},
+  organization={IEEE}
+}
+
 @article{Adar-Freeriding,
   title={Free riding on Gnutella},
   author={Adar, Eytan and Huberman, Bernardo A},
@@ -89,8 +107,6 @@
   year={2000}
 }
 
-
-
 @article{Maniatis-Timeline,
   title={Secure history preservation through timeline entanglement},
   author={Maniatis, Petros and Baker, Mary},
@@ -98,7 +114,12 @@
   year={2002}
 }
 
-
+@article{levine-sybilsurvey,
+  title={A survey of solutions to the sybil attack},
+  author={Levine, Brian Neil and Shields, Clay and Margolin, N Boris},
+  journal={University of Massachusetts Amherst, Amherst, MA},
+  year={2006}
+}
 
 @article{Nakamoto-bitcoin,
   title={Bitcoin: A peer-to-peer electronic cash system},
@@ -160,6 +181,18 @@
       howpublished = {\url{https://blockchain.info/charts/Difficulty}}
 }
 
+@misc{andresen-blocksize,
+  title={Bitcoin Improvement Proposal 0101: Increase maximum block size},
+  author={Andresen, Gavin},
+  year={2015}
+}
+
+@misc{garzik-blocksize,
+  title={Bitcoin Improvement Proposal 0102: Block size increase to 2MB},
+  author={Garzik, Jeff},
+  year={2015}
+}
+
 @MISC{Cohen-bittorrent,
 	title = {The BitTorrent protocol specification},
 	author = {Cohen, Bram},
@@ -175,5 +208,14 @@
   booktitle={Advances in Cryptology—EUROCRYPT'98},
   pages={591--606},
   year={1998},
+  publisher={Springer}
+}
+
+@incollection{douceur-sybil,
+  title={The sybil attack},
+  author={Douceur, John R},
+  booktitle={Peer-to-peer Systems},
+  pages={251--260},
+  year={2002},
   publisher={Springer}
 }
