--- a/design/design.tex
+++ b/design/design.tex
@@ -18,10 +18,16 @@ The system will make a node's share ratio publicly accessibly,
 but it will expose and limit freeriding in several other ways.
 
 The window of potential freeriding is chosen by the willingness of seeders to be altruistic.
-Because the creation of blocks is driven by seeders,
+The creation of blocks is driven by seeders,
 downloaders cannot postpone creation of blocks and continue freeriding.
-If downloaders does not participate in block creation,
+If downloaders do not participate in block creation,
 then uploading to them will stop.
+
+A created block will force a downloader to expose his own freeloading,
+because he will have to add his own total amount of uploaded data and total amount of downloaded data.
+If he has not contribute his share and only downloaded,
+then his total down will be much higher then his total up.
+His freeloading is exposed as a result.
 
 Downloaders cannot repudiate downloading.
 For they granted their signature to a block containing information about the amount that they downloaded.
