--- a/preface.tex
+++ b/preface.tex
@@ -4,28 +4,28 @@ The huge increase in Bitcoin adoption,
 due to the increase in uncertainty in the security of traditional currency 
 after the financial crisis in 2008, 
 is only rivaled by the speculation of the enormous possibilities 
-of the underlying technology of the blockchain.
-The blockchain is the first technology, seen with real world adoption,
+of the underlying technology of the block chain.
+The block chain is the first technology, seen with real world adoption,
 that allows to register transactions without a trusted third party.
-But the blockchain has several limitations in scalabillity 
+But the block chain has several limitations in scalabillity 
 that will limit Bitcoins in fully replacing traditional currencies with a digital currency.
-It also limits blockchain as a scalable basis for a large scale reputation system, 
-similair to a digital currency, with vast amounts of transactions.
-This motivated to research the properties and possibilities of a variant of the blockchain:
+It also limits block chain as a scalable basis for a large scale reputation system, 
+similar to a digital currency, with vast amounts of transactions.
+This motivated to research the properties and possibilities of a variant of the block chain:
 multichain.
 
 \vspace{1\baselineskip}
 
 \noindent
 I would like to acknowledge several people that helped me during my master thesis.
-First I would to heartly thank dr.ir. Johan Pouwelse for his mentoring and helping me in setting goals and achieving these goals in a timely manner.
+First I would to heartily thank dr.ir. Johan Pouwelse for his mentoring and helping me in setting goals and achieving these goals in a timely manner.
 Furthermore I would like to thank dr.ir. Cor-Paul Bezemer for his guidance and help with implementing within Tribler. 
-I also would like to thank Elric Milon and Lipu Fei for answering countless questions and problems I encountered durng the programming phase of my thesis.
+I also would like to thank Elric Milon and Lipu Fei for answering countless questions and problems I encountered during the programming phase of my thesis.
 For the excellent feedback and help to improve my code I would like to thank dr.ir. Niels Zeilemaker.
 His support by adding functionality to Dispersy was also invaluable.
 Rob Ruigrok was doing his master thesis at the same time
-and helped me to avoid problems he encountered before I experienced them aswell and
-I am gratefull for this help.
+and helped me to avoid problems he encountered before I experienced them as well and
+I am grateful for this help.
 I am also very thankful for the companionship I felt within my work room 
 and I would like to thank especially Hans Bogerts BSc, Niels Doekeijmeier BSc and Ernst van der Hoeven BSc.
 You certainly made my work more enjoyable.
