--- a/thesis.tex
+++ b/thesis.tex
@@ -57,6 +57,7 @@
 \cleardoublepage
 
 % TABLE OF CONTENTS: starting at page vii
+\setcounter{tocdepth}{1}
 \tableofcontents
 
 \cleardoublepage
@@ -76,6 +77,9 @@
 \input{relatedWork/relatedWork.tex}
 %Design
 \input{design/design.tex}
+%Problems
+\input{problems/problems.tex}
+
 
 % BIBLIOGRAPHY
 \bibliographystyle{bib/latex8}
